--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head><title>AR Hosting</title></head>
-<body>
-  <h2>Upload a File</h2>
-  <input type="file" id="fileInput"><button onclick="upload()">Upload</button>
-  <p id="link"></p>
+<head><title>Ansh Hosting</title>
+  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AnshHosting</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+    .upload-box {
+      background: #ffffff;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+    }
+    .upload-box h1 {
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
+      color: #222;
+    }
+    .upload-box input[type="file"] {
+      margin-top: 1rem;
+      padding: 0.6rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      width: 70%;
+    }
+    .upload-box button {
+      padding: 0.6rem 1rem;
+      margin-left: 0.5rem;
+      background-color: #4f46e5;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    .upload-box button:hover {
+      background-color: #4338ca;
+    }
+    .upload-box p {
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      color: #555;
+    }
+    .upload-box a {
+      color: #4f46e5;
+      text-decoration: none;
+      margin: 0 0.3rem;
+    }
+    .upload-box a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+  <body>
+  <div class="upload-box">
+    <h1>AnshHosting</h1>
+    <input type="file" />
+    <button>Browse</button>
+    <p>Go To - <a href="t.me/anshapi">About</a> | <a href="#">API Page</a></p>
+    <p>Made with ❤️ by - <a href="#">AnshApi</a></p>
+  </div>
 
   <script>
     async function upload() {
